alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,28 +134,38 @@ footer {
 .social-sticky {
     position: fixed;
     z-index: 10;
-    width:"40px" ;
+    width: "40px";
     background: none;
 }
 
 .whatsapp-btn {
-   text-align: center;
+    text-align: center;
 }
 
-.features-point{
-    padding:40px 15px 37px 15px;
+.features-point {
+    padding: 40px 15px 37px 15px;
 }
 
 
 .shot-main {
     display: grid;
-    grid-template-columns:12% 12% 12% 12% 12% 12% 12% 12% ;
+    grid-template-columns: 12% 12% 12% 12% 12% 12% 12% 12%;
     padding: 20px;
 }
 
-@media (max-width:764px){
+@media (max-width:764px) {
     .shot-main {
-        display:grid;
-        grid-template-columns:25% 25% 25% 25%;
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
     }
+}
+
+.online-game a:link {
+    text-decoration: none;
+    color: white;
+}
+
+.betx-banner a:link {
+    text-decoration: none;
+    color: white;
 }
